--- a/extension/popup.html
+++ b/extension/popup.html
@@ -6,7 +6,7 @@
     </head>
     <body class="jumbotron">
         <div class="container">
-            <h4 class="text-center">Career Archi-Tech</h1>
+            <h4 class="text-center">jobarchi.tech</h1>
         </div>
         <div>
             <div class="text-center">
